--- a/gradle.properties
+++ b/gradle.properties
@@ -6,10 +6,10 @@ org.gradle.debug=false
 neogradle.subsystems.conventions.runs.create-default-run-per-type=false
 
 ## Environment Properties
-minecraft_version=1.21.8
-minecraft_version_range=[1.21.8,1.22)
-neo_version=21.8.47
-neo_version_range=[21.1.47,)
+minecraft_version=1.21.9
+minecraft_version_range=[1.21.9,1.22)
+neo_version=21.9.6-beta
+neo_version_range=[21.9.6-beta,)
 loader_version_range=[4,)
 
 ## Mod Properties
@@ -21,13 +21,13 @@ mod_group_id=com.benbenlaw.utility
 mod_authors=benbenlaw
 mod_description=Useful blocks and items
 
-jei_mc_version=1.21.8-neoforge
-jei_version=24.0.0.2
+jei_mc_version=1.21.9-neoforge
+jei_version=25.0.0.2
 
 ## Auto Updates
 release_type=release
-release_versions = 1.21.8
-curseforge_id = 1135181
-modrinth_id = tfpHINm8
+release_versions = 1.21.9
+curseforge_id = 649644
+modrinth_id = rzq32Rx3
 changelog=Join the discord here for mod and modpack updates and support https://discord.gg/benbenlaw \
-  https://github.com/benbenlaw/BBLCore/blob/master/change
+  https://github.com/benbenlaw/BBL-Utility/blob/master/changelog.txt
